# utils-common

aws_common/: CMakeLists.txt  aws_commonConfig.cmake.in
aws_common/include/aws_common/sdk_utils/: parameter_reader.h
aws_common/src/sdk_utils/auth/: service_credentials_provider.cpp
aws_common/test/include/aws_common/sdk_utils/: parameter_reader_mock.h
aws_common/test/sdk_utils/logging/: aws_log_system_test.cpp
